# DesktopTown

./: .gitignore  .gitmodules  CMakeLists.txt
include/DesktopTown/: Context.hpp  DesktopTown.hpp  Error.hpp  FileUtil.hpp  FontContext.hpp  GL.hpp  Material.hpp  Mesh.hpp  Model.hpp  Sprite.hpp  Util.hpp  VecView.hpp  WindowManager.hpp  WindowUtil.hpp
include/DesktopTown/GL/: GLBuffer.hpp  GLFramebuffer.hpp  GLObject.hpp  GLPipeline.hpp  GLProgram.hpp  GLQuery.hpp  GLRenderbuffer.hpp  GLShader.hpp  GLTexture.hpp  GLVertexArray.hpp
shader/sprite/: fragment.glsl  vertex.glsl
shader/text/: fragment.glsl  vertex.glsl
src/: context.cpp  file_util.cpp  font_context.cpp  gl_buffers.cpp  gl_pipelines.cpp  gl_program.cpp  gl_shader.cpp  gl_textures.cpp  gl_vertex_arrays.cpp  glfw_hide_taskbar_icon.cpp  main.cpp  material.cpp  mesh.cpp  shader_info.cpp  sprite.cpp  window_manager.cpp
src/gl/: buffer.cpp  defer.cpp  framebuffer.cpp  object.cpp  pipeline.cpp  program.cpp  query.cpp  renderbuffer.cpp  shader.cpp  texture.cpp  vertex_array.cpp
