cmake_minimum_required(VERSION 3.25)

project(DesktopTown)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

file(GLOB_RECURSE sources src/*.cpp src/*.c include/*.hpp include/*.h)
add_executable(DesktopTown ${sources})
target_include_directories(DesktopTown PRIVATE include)

option(BUILD_SHARED_LIBS "" OFF)
option(GLFW_BUILD_EXAMPLES "" OFF)
option(GLFW_BUILD_TESTS "" OFF)
option(GLFW_BUILD_DOCS "" OFF)
option(GLFW_INSTALL "" OFF)
add_subdirectory(deps/glfw)
target_link_libraries(DesktopTown PRIVATE glfw)

option(glew-cmake_BUILD_SHARED "" OFF)
option(glew-cmake_BUILD_STATIC "" ON)
option(USE_GLU "" OFF)
option(GLEW_OSMESA "" OFF)
option(PKG_CONFIG_REPRESENTATIVE_TARGET "" OFF)
option(ONLY_LIBS "" ON)
add_subdirectory(deps/glew)
target_link_libraries(DesktopTown PRIVATE libglew_static)

option(FT_DISABLE_ZLIB "" ON)
option(FT_DISABLE_BZIP2 "" ON)
option(FT_DISABLE_PNG "" ON)
option(FT_DISABLE_HARFBUZZ "" ON)
option(FT_DISABLE_BROTLI "" ON)
add_subdirectory(deps/freetype)
target_link_libraries(DesktopTown PRIVATE freetype)

option(GLM_BUILD_LIBRARY "" ON)
option(GLM_BUILD_TESTS "" OFF)
option(GLM_BUILD_INSTALL "" OFF)
option(GLM_ENABLE_CXX_20 "" ON)
add_subdirectory(deps/glm)
target_link_libraries(DesktopTown PRIVATE glm::glm)

add_subdirectory(deps/stb)
target_link_libraries(DesktopTown PRIVATE stb)
